quickAlgo-mobileFirst: Fix height issues on tablet portrait

--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -451,8 +451,10 @@ p {
     position: relative;
     margin-bottom: 10px;
     -webkit-box-flex: 1;
-        -ms-flex: 1 1 auto;
-            flex: 1 1 auto;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
+    min-height: 250px;
+    max-height: 40%;
   }
   #introGrid .speedControls {
     position: absolute;
